@@ -1,13 +1,11 @@
 package com.jetbrains.youtrack.db.internal.core.sql.select;
 
-import com.jetbrains.youtrack.db.internal.DbTestBase;
-import com.jetbrains.youtrack.db.api.record.Entity;
-import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import com.jetbrains.youtrack.db.api.query.Result;
+import com.jetbrains.youtrack.db.api.record.Identifiable;
+import com.jetbrains.youtrack.db.internal.DbTestBase;
+import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -15,37 +13,35 @@ public class TestSqlEmbeddedResult extends DbTestBase {
 
   @Test
   public void testEmbeddedRusultTypeNotLink() {
-    db.getMetadata().getSchema().createClass("Test");
+    session.getMetadata().getSchema().createClass("Test");
 
-    db.begin();
-    EntityImpl doc = new EntityImpl("Test");
-    EntityImpl doc1 = new EntityImpl();
+    session.begin();
+    var doc = ((EntityImpl) session.newEntity("Test"));
+    var doc1 = ((EntityImpl) session.newEntity());
     doc1.setProperty("format", 1);
-    Set<EntityImpl> docs = new HashSet<EntityImpl>();
+    Set<Identifiable> docs = new HashSet<>();
     docs.add(doc1);
-    doc.setProperty("rel", docs);
+    doc.newLinkSet("rel", docs);
     // doc
-    db.save(doc);
-    db.commit();
+    session.commit();
 
-    List<Entity> res =
-        db
+    session.begin();
+    var res =
+        session
             .query(
                 "select $current as el " + " from (select expand(rel.include('format')) from Test)")
-            .stream()
-            .map(Result::toEntity)
-            .collect(Collectors.toList());
-    Assert.assertEquals(res.size(), 1);
-    Entity ele = res.get(0);
-    Assert.assertTrue(ele.getProperty("el") instanceof EntityImpl);
+            .toList();
+    Assert.assertEquals(1, res.size());
+    var ele = res.getFirst();
+    Assert.assertTrue(ele.getProperty("el") instanceof Result);
 
     res =
-        db.query("select rel as el " + " from (select rel from Test)").stream()
-            .map(Result::toEntity)
+        session.query("select rel as el " + " from (select rel from Test)").stream()
             .toList();
 
-    Assert.assertEquals(res.size(), 1);
-    ele = res.get(0);
+    Assert.assertEquals(1, res.size());
+    ele = res.getFirst();
     Assert.assertTrue(ele.getProperty("el") instanceof Set<?>);
+    session.commit();
   }
 }
