@@ -21,175 +21,170 @@ package com.jetbrains.youtrack.db.internal.lucene.tests;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import com.jetbrains.youtrack.db.api.query.Result;
-import com.jetbrains.youtrack.db.api.query.ResultSet;
 import com.jetbrains.youtrack.db.api.record.Entity;
-import com.jetbrains.youtrack.db.api.record.RID;
 import com.jetbrains.youtrack.db.api.schema.PropertyType;
-import com.jetbrains.youtrack.db.api.schema.SchemaClass;
 import com.jetbrains.youtrack.db.internal.core.id.RecordId;
-import com.jetbrains.youtrack.db.internal.core.index.Index;
 import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import java.util.Collection;
-import java.util.Iterator;
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
-/**
- *
- */
 public class LuceneTransactionQueryTest extends LuceneBaseTest {
 
   @Before
   public void init() {
 
-    final SchemaClass c1 = db.createVertexClass("C1");
-    c1.createProperty(db, "p1", PropertyType.STRING);
-    c1.createIndex(db, "C1.p1", "FULLTEXT", null, null, "LUCENE", new String[]{"p1"});
+    final var c1 = session.createVertexClass("C1");
+    c1.createProperty("p1", PropertyType.STRING);
+    c1.createIndex("C1.p1", "FULLTEXT", null, null, "LUCENE", new String[]{"p1"});
   }
 
   @Test
   public void testRollback() {
+    session.begin();
+    var doc = ((EntityImpl) session.newVertex("c1"));
+    doc.setProperty("p1", "abc");
 
-    EntityImpl doc = new EntityImpl("c1");
-    doc.field("p1", "abc");
-    db.begin();
-    db.save(doc);
 
-    String query = "select from C1 where search_fields(['p1'], 'abc' )=true ";
+    var query = "select from C1 where search_fields(['p1'], 'abc' )=true ";
 
-    try (ResultSet vertices = db.command(query)) {
+    try (var vertices = session.execute(query)) {
       assertThat(vertices).hasSize(1);
     }
 
-    db.rollback();
+    session.rollback();
 
-    try (ResultSet vertices = db.command(query)) {
+    try (var vertices = session.execute(query)) {
       assertThat(vertices).hasSize(0);
     }
   }
 
   @Test
   public void txRemoveTest() {
-    db.begin();
+    session.begin();
+    var doc = ((EntityImpl) session.newVertex("c1"));
+    doc.setProperty("p1", "abc");
 
-    EntityImpl doc = new EntityImpl("c1");
-    doc.field("p1", "abc");
+    var index = session.getSharedContext().getIndexManager().getIndex(session, "C1.p1");
 
-    Index index = db.getMetadata().getIndexManagerInternal().getIndex(db, "C1.p1");
+    var query = "select from C1 where search_fields(['p1'], 'abc' )=true ";
 
-    db.save(doc);
-
-    String query = "select from C1 where search_fields(['p1'], 'abc' )=true ";
-
-    try (ResultSet vertices = db.command(query)) {
+    try (var vertices = session.execute(query)) {
       assertThat(vertices).hasSize(1);
     }
-    assertThat(index.getInternal().size(db)).isEqualTo(1);
+    assertThat(index.size(session)).isEqualTo(1);
 
-    db.commit();
+    session.commit();
 
-    db.begin();
+    session.begin();
     List<Result> results;
-    try (ResultSet vertices = db.command(query)) {
+    try (var vertices = session.execute(query)) {
       //noinspection resource
       results = vertices.stream().collect(Collectors.toList());
       assertThat(results).hasSize(1);
     }
-    assertThat(index.getInternal().size(db)).isEqualTo(1);
+    assertThat(index.size(session)).isEqualTo(1);
 
-    doc = new EntityImpl("c1");
-    doc.field("p1", "abc");
+    doc = ((EntityImpl) session.newVertex("c1"));
+    doc.setProperty("p1", "abc");
 
-    //noinspection OptionalGetWithoutIsPresent
-    db.delete(results.get(0).getEntity().get().getIdentity());
-
-    Collection coll;
-    try (ResultSet vertices = db.query(query)) {
-      try (Stream<RID> stream = index.getInternal().getRids(db, "abc")) {
+    Collection<Object> coll;
+    try (var vertices = session.query(query)) {
+      try (var stream = index.getRids(session, "abc")) {
         coll = stream.collect(Collectors.toList());
       }
 
-      assertThat(coll).hasSize(0);
-      assertThat(vertices).hasSize(0);
+      assertThat(coll).hasSize(2);
+      assertThat(vertices).hasSize(2);
     }
 
-    Iterator iterator = coll.iterator();
-    int i = 0;
+    session.delete(results.getFirst().asEntity());
+
+    try (var vertices = session.query(query)) {
+      try (var stream = index.getRids(session, "abc")) {
+        coll = stream.collect(Collectors.toList());
+      }
+
+      assertThat(coll).hasSize(1);
+      assertThat(vertices).hasSize(1);
+    }
+
+    var iterator = coll.iterator();
+    var i = 0;
     while (iterator.hasNext()) {
       iterator.next();
       i++;
     }
-    Assert.assertEquals(i, 0);
-    assertThat(index.getInternal().size(db)).isEqualTo(0);
-    db.rollback();
+    Assert.assertEquals(i, 1);
+    assertThat(index.size(session)).isEqualTo(1);
+    session.rollback();
 
+    session.begin();
     query = "select from C1 where search_fields(['p1'], 'abc' )=true ";
 
-    try (ResultSet vertices = db.command(query)) {
+    try (var vertices = session.execute(query)) {
       assertThat(vertices).hasSize(1);
     }
-    assertThat(index.getInternal().size(db)).isEqualTo(1);
+    assertThat(index.size(session)).isEqualTo(1);
+    session.commit();
   }
 
   @Test
   public void txUpdateTest() {
 
-    Index index = db.getMetadata().getIndexManagerInternal().getIndex(db, "C1.p1");
-    var c1 = db.getMetadata().getSchema().getClassInternal("C1");
-    c1.truncate(db);
+    var index = session.getSharedContext().getIndexManager().getIndex(session, "C1.p1");
+    var c1 = session.getMetadata().getSchema().getClassInternal("C1");
+    c1.truncate();
 
-    db.begin();
-    Assert.assertEquals(index.getInternal().size(db), 0);
+    session.begin();
+    Assert.assertEquals(index.size(session), 0);
 
-    EntityImpl doc = new EntityImpl("c1");
-    doc.field("p1", "update");
+    var doc = ((EntityImpl) session.newVertex("c1"));
+    doc.setProperty("p1", "update");
 
-    db.save(doc);
-
-    String query = "select from C1 where search_fields(['p1'], \"update\")=true ";
-    try (ResultSet vertices = db.command(query)) {
+    var query = "select from C1 where search_fields(['p1'], \"update\")=true ";
+    try (var vertices = session.execute(query)) {
       assertThat(vertices).hasSize(1);
     }
-    Assert.assertEquals(1, index.getInternal().size(db));
+    Assert.assertEquals(1, index.size(session));
 
-    db.commit();
+    session.commit();
 
+    session.begin();
     List<Result> results;
-    try (ResultSet vertices = db.command(query)) {
-      try (Stream<Result> resultStream = vertices.stream()) {
+    try (var vertices = session.execute(query)) {
+      try (var resultStream = vertices.stream()) {
         results = resultStream.collect(Collectors.toList());
       }
     }
 
     Collection coll;
-    try (Stream<RID> stream = index.getInternal().getRids(db, "update")) {
+    try (var stream = index.getRids(session, "update")) {
       coll = stream.collect(Collectors.toList());
     }
 
     assertThat(results).hasSize(1);
     assertThat(coll).hasSize(1);
-    assertThat(index.getInternal().size(db)).isEqualTo(1);
+    assertThat(index.size(session)).isEqualTo(1);
 
-    db.begin();
-
-    Result record = results.get(0);
+    var record = results.getFirst();
+    Entity identifiable = record.asEntity();
+    var activeTx = session.getActiveTransaction();
     @SuppressWarnings("OptionalGetWithoutIsPresent")
-    Entity element = db.bindToSession(record.getEntity().get());
+    var element = activeTx.<Entity>load(identifiable);
     element.setProperty("p1", "removed");
-    db.save(element);
 
-    try (ResultSet vertices = db.command(query)) {
+    try (var vertices = session.execute(query)) {
       assertThat(vertices).hasSize(0);
     }
-    Assert.assertEquals(1, index.getInternal().size(db));
+    Assert.assertEquals(1, index.size(session));
 
     query = "select from C1 where search_fields(['p1'], \"removed\")=true ";
-    try (ResultSet vertices = db.command(query)) {
-      try (Stream<RID> stream = index.getInternal().getRids(db, "removed")) {
+    try (var vertices = session.execute(query)) {
+      try (var stream = index.getRids(session, "removed")) {
         coll = stream.collect(Collectors.toList());
       }
 
@@ -198,50 +193,49 @@ public class LuceneTransactionQueryTest extends LuceneBaseTest {
 
     Assert.assertEquals(1, coll.size());
 
-    db.rollback();
+    session.rollback();
 
+    session.begin();
     query = "select from C1 where search_fields(['p1'], \"update\")=true ";
-    try (ResultSet vertices = db.command(query)) {
-      try (Stream<RID> stream = index.getInternal().getRids(db, "update")) {
+    try (var vertices = session.execute(query)) {
+      try (var stream = index.getRids(session, "update")) {
         coll = stream.collect(Collectors.toList());
       }
       assertThat(vertices).hasSize(1);
     }
     assertThat(coll).hasSize(1);
-    assertThat(index.getInternal().size(db)).isEqualTo(1);
+    assertThat(index.size(session)).isEqualTo(1);
+    session.commit();
   }
 
   @Test
   public void txUpdateTestComplex() {
 
-    Index index = db.getMetadata().getIndexManagerInternal().getIndex(db, "C1.p1");
-    var c1 = db.getMetadata().getSchema().getClassInternal("C1");
-    c1.truncate(db);
+    var index = session.getSharedContext().getIndexManager().getIndex(session, "C1.p1");
+    var c1 = session.getMetadata().getSchema().getClassInternal("C1");
+    c1.truncate();
 
-    db.begin();
-    Assert.assertEquals(index.getInternal().size(db), 0);
+    session.begin();
+    Assert.assertEquals(index.size(session), 0);
 
-    EntityImpl doc = new EntityImpl("c1");
-    doc.field("p1", "abc");
+    var doc = ((EntityImpl) session.newVertex("c1"));
+    doc.setProperty("p1", "abc");
 
-    EntityImpl doc1 = new EntityImpl("c1");
-    doc1.field("p1", "abc");
+    var doc1 = ((EntityImpl) session.newVertex("c1"));
+    doc1.setProperty("p1", "abc");
 
-    db.save(doc1);
-    db.save(doc);
+    session.commit();
 
-    db.commit();
+    session.begin();
 
-    db.begin();
+    var activeTx = session.getActiveTransaction();
+    doc = activeTx.load(doc);
+    doc.setProperty("p1", "removed");
 
-    doc = db.bindToSession(doc);
-    doc.field("p1", "removed");
-    db.save(doc);
-
-    String query = "select from C1 where search_fields(['p1'], \"abc\")=true ";
+    var query = "select from C1 where search_fields(['p1'], \"abc\")=true ";
     Collection coll;
-    try (ResultSet vertices = db.command(query)) {
-      try (Stream<RID> stream = index.getInternal().getRids(db, "abc")) {
+    try (var vertices = session.execute(query)) {
+      try (var stream = index.getRids(session, "abc")) {
         coll = stream.collect(Collectors.toList());
       }
 
@@ -249,8 +243,8 @@ public class LuceneTransactionQueryTest extends LuceneBaseTest {
       Assert.assertEquals(1, coll.size());
     }
 
-    Iterator iterator = coll.iterator();
-    int i = 0;
+    var iterator = coll.iterator();
+    var i = 0;
     RecordId rid = null;
     while (iterator.hasNext()) {
       rid = (RecordId) iterator.next();
@@ -260,11 +254,11 @@ public class LuceneTransactionQueryTest extends LuceneBaseTest {
     Assert.assertEquals(i, 1);
     Assert.assertNotNull(rid);
     Assert.assertEquals(doc1.getIdentity().toString(), rid.getIdentity().toString());
-    Assert.assertEquals(index.getInternal().size(db), 2);
+    Assert.assertEquals(index.size(session), 2);
 
     query = "select from C1 where search_fields(['p1'], \"removed\")=true ";
-    try (ResultSet vertices = db.command(query)) {
-      try (Stream<RID> stream = index.getInternal().getRids(db, "removed")) {
+    try (var vertices = session.execute(query)) {
+      try (var stream = index.getRids(session, "removed")) {
         coll = stream.collect(Collectors.toList());
       }
 
@@ -272,13 +266,15 @@ public class LuceneTransactionQueryTest extends LuceneBaseTest {
       Assert.assertEquals(coll.size(), 1);
     }
 
-    db.rollback();
+    session.rollback();
 
+    session.begin();
     query = "select from C1 where search_fields(['p1'], \"abc\")=true ";
-    try (ResultSet vertices = db.command(query)) {
+    try (var vertices = session.execute(query)) {
       assertThat(vertices).hasSize(2);
     }
 
-    Assert.assertEquals(index.getInternal().size(db), 2);
+    Assert.assertEquals(index.size(session), 2);
+    session.commit();
   }
 }
